--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.thymeleaf.prefix=classpath:/static/
-jwt.secret=bestbest
+
+jwt.secret=javainuse
