마이페이지 프로필 사진 업로드

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,7 @@ spring.datasource.url=jdbc:h2:mem:testdb
 spring.thymeleaf.prefix=classpath:/static/
 
 jwt.secret=javainuse
+
+cloud.aws.region.static=ap-northeast-2
+cloud.aws.region.auto=false
+cloud.aws.stack.auto=false
