--- a/src/main/resources/static/application.properties
+++ b/src/main/resources/static/application.properties
@@ -1,11 +1,11 @@
 spring.h2.console.enabled=true
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:./myselectdb;AUTO_SERVER=TRUE
+spring.datasource.url=jdbc:h2:mem:springcoredb
 spring.datasource.username=sa
 spring.datasource.password=
 
 spring.thymeleaf.prefix=classpath:/static/
-spring.jpa.show-sql=true
+spring.thymeleaf.cache=false
+
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
