--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,17 @@ jwt.secret=javainuse
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.region.auto=false
 cloud.aws.stack.auto=false
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/thebestmeal?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
+#
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+## SQL ???
+#spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+#spring.jpa.hibernate.ddl-auto = update
