--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.thymeleaf.prefix=classpath:/static/
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.thymeleaf.prefix=classpath:/static/
 
 jwt.secret=javainuse
 
@@ -9,15 +9,14 @@ cloud.aws.region.auto=false
 cloud.aws.stack.auto=false
 
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/thebestmeal?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
-#
-#spring.datasource.username=root
-#spring.datasource.password=1234
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#
-## SQL ???
-#spring.jpa.show-sql=true
-#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-#
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.hibernate.ddl-auto = update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://bestmealever.cg5ltj9bakht.ap-northeast-2.rds.amazonaws.com:3306/bestmealever
+spring.datasource.username=--
+spring.datasource.password=--
+
+# SQL ???
+spring.jpa.show-sql=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto = update
