--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,8 @@ cloud.aws.stack.auto=false
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://bestmealever.cg5ltj9bakht.ap-northeast-2.rds.amazonaws.com:3306/bestmealever
-spring.datasource.username=--
-spring.datasource.password=--
+spring.datasource.username=admin
+spring.datasource.password=dlrjtkwh
 
 # SQL ???
 spring.jpa.show-sql=true
