--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,4 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.format_sql=true
