s3 aws 에는 잘 올라가나, 프론트에서 api/post 저장 500 오류

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,11 @@ cloud.aws.stack.auto=false
 cloud.aws.credentials.use-default-aws-credentials-chain=true
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.region.auto=false
-cloud.aws.s3.bucket=jmspring
-cloud.aws.s3.uri=https://jmspring.s3.ap-northeast-2.amazonaws.com/
+#cloud.aws.s3.bucket=jmspring
+#cloud.aws.s3.uri=https://jmspring.s3.ap-northeast-2.amazonaws.com/
+#?? ???? ???
+cloud.aws.s3.bucket=1203weekly
+cloud.aws.s3.uri=https://1203weekly.s3.ap-northeast-2.amazonaws.com/
 
 logging.level.com.amazonaws.util.EC2MetadataUtils= error
 
