--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,16 +13,16 @@ cloud.aws.s3.uri=https://jmspring.s3.ap-northeast-2.amazonaws.com/
 
 logging.level.com.amazonaws.util.EC2MetadataUtils= error
 
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://bestmealever.cg5ltj9bakht.ap-northeast-2.rds.amazonaws.com:3306/bestmealever
-#spring.datasource.username=admin
-#spring.datasource.password=dlrjtkwh
-
-spring.datasource.url=jdbc:mysql://localhost:3306/likedfoodtest?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
-
-spring.datasource.username=root
-spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://bestmealever.cg5ltj9bakht.ap-northeast-2.rds.amazonaws.com:3306/bestmealever
+spring.datasource.username=admin
+spring.datasource.password=dlrjtkwh
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/likedfoodtest?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
+#
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # SQL ???
 spring.jpa.show-sql=true
