--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,8 @@ cloud.aws.stack.auto=false
 cloud.aws.credentials.use-default-aws-credentials-chain=true
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.region.auto=false
-cloud.aws.s3.bucket=thebestmeal
-cloud.aws.s3.uri=https://thebestmeal.s3.ap-northeast-2.amazonaws.com/
-
+cloud.aws.s3.bucket=elasticbeanstalk-ap-northeast-2-657625833664
+cloud.aws.s3.uri=https://elasticbeanstalk-ap-northeast-2-657625833664.s3.ap-northeast-2.amazonaws.com/
 
 
 logging.level.com.amazonaws.util.EC2MetadataUtils= error
