--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,10 @@ dependencies {
     implementation group: 'org.json', name: 'json', version: '20180813'
     //s3 업로드
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
-
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.modelmapper:modelmapper:2.4.4'
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'com.google.code.gson:gson:2.8.8'
 }
 
 test {
