--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,6 +19,12 @@ spring.datasource.url=jdbc:mysql://bestmealever.cg5ltj9bakht.ap-northeast-2.rds.
 spring.datasource.username=admin
 spring.datasource.password=dlrjtkwh
 
+#spring.datasource.url=jdbc:mysql://localhost:3306/likedfoodtest?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
+#
+#spring.datasource.username=root
+#spring.datasource.password=1234
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 # SQL ???
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
