--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     implementation 'org.modelmapper:modelmapper:2.4.4'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
     implementation 'com.google.code.gson:gson:2.8.8'
-    implementation 'com.github.maricn:logback-slack-appender:1.4.0'
+    implementation 'com.github.maricn:logback-slack-appender:1.4.0' // 슬랙 상태 메세지 앱 추가
 }
 
 test {
