--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,33 +2,34 @@
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.thymeleaf.prefix=classpath:/static/
 
+# jwt secretkey --required refactoring
 jwt.secret=javainuse
 
+# Setting to prod
+# --using s3
 cloud.aws.stack.auto=false
 cloud.aws.credentials.use-default-aws-credentials-chain=true
 cloud.aws.region.static=ap-northeast-2
 cloud.aws.region.auto=false
-
 cloud.aws.s3.bucket=thebestmeal
 cloud.aws.s3.uri=https://thebestmeal.s3.ap-northeast-2.amazonaws.com/
+# --using EC2
+logging.level.com.amazonaws.util.EC2MetadataUtils=error
 
-logging.level.com.amazonaws.util.EC2MetadataUtils= error
-
+# Setting to datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://bestmealever.cg5ltj9bakht.ap-northeast-2.rds.amazonaws.com:3306/bestmealever
-spring.datasource.username=admin
-spring.datasource.password=dlrjtkwh
+spring.datasource.url=jdbc:mysql://localhost:3306/likedfoodtest?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=1234
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/likedfoodtest?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
-#
-#spring.datasource.username=root
-#spring.datasource.password=1234
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# --using RDS
+# spring.datasource.url=jdbc:mysql://bestmealever.cg5ltj9bakht.ap-northeast-2.rds.amazonaws.com:3306/bestmealever
+# spring.datasource.username=admin
+# spring.datasource.password=dlrjtkwh
 
-# SQL ???
+# Log for SQL
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
