--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ cloud.aws.region.auto=false
 cloud.aws.s3.bucket=thebestmeal
 cloud.aws.s3.uri=https://thebestmeal.s3.ap-northeast-2.amazonaws.com/
 # --using EC2
-#logging.level.com.amazonaws.util.EC2MetadataUtils=error
+logging.level.com.amazonaws.util.EC2MetadataUtils=error
 
 # Setting to datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
