--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,10 @@ logging.level.com.amazonaws.util.EC2MetadataUtils=error
 
 # Setting to datasource
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/likedfoodtest?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3306/likedfoodtest?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC&allowPublicKeyRetrieval=true&createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=update
 
 # --using RDS
 # spring.datasource.url=jdbc:mysql://bestmealever.cg5ltj9bakht.ap-northeast-2.rds.amazonaws.com:3306/bestmealever
@@ -31,5 +32,4 @@ spring.datasource.password=1234
 spring.jpa.show-sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
